# sistema-logistica

./: .gitignore  README.md
sistema_logistica/: .gitignore  pyproject.toml
sistema_logistica/config/: settings.py  urls.py
sistema_logistica/core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
sistema_logistica/core/migrations/: 0001_initial.py  0002_motorista_usuario.py
sistema_logistica/core/templates/core/: form_entrega.html  index.html  lista_entregas.html  rastreamento.html
sistema_logistica/core/templates/registration/: login.html
